--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -41,6 +41,14 @@
       <div class="content">
         {{ content }}
       </div>
+      <hr>
+      <footer>
+        <p><small>
+  <!-- start of Karl's footer; modify this part -->
+          The layout of this website is derived from Karl Broman's <a href="https://kbroman.org">simple site</a> (Public domain)
+  <!-- end of Karl's footer; modify this part -->
+        </small></p>
+      </footer>
 
     </div>
 
